--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                         <div class="boxIcon">
                             <i class="fa-solid fa-id-badge"></i></i>
                         </div>
-                        <div class="label">To Opay</div>
+                        <div class="label">Airtime</div>
                     </div>
 
-                    
+
 
                     <div class="box">
                         <div class="boxIcon">
@@ -134,14 +134,14 @@
 
 
                 <div class="downSub">
-<div class="box">
+                    <div class="box">
                         <div class="boxIcon">
                             <i class="fa-solid fa-id-badge"></i></i>
                         </div>
                         <div class="label">To Opay</div>
                     </div>
 
-                    
+
 
                     <div class="box">
                         <div class="boxIcon">
