--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                     <div class="box">
                         <div class="boxIcon">
-                            <i class="fa-solid fa-id-badge"></i></i>
+                            <i class="fa-solid fa-square-phone"></i></i>
                         </div>
                         <div class="label">Airtime</div>
                     </div>
@@ -108,25 +108,25 @@
 
                     <div class="box">
                         <div class="boxIcon">
-                            <i class="fa-solid fa-id-badge"></i></i>
+                            <i class="fa-solid fa-mobile"></i></i>
                         </div>
-                        <div class="label">To Opay</div>
+                        <div class="label">Data</div>
                     </div>
 
 
                     <div class="box">
                         <div class="boxIcon">
-                            <i class="fa-solid fa-id-badge"></i></i>
+                            <i class="fa-solid fa-basketball"></i></i>
                         </div>
-                        <div class="label">To Opay</div>
+                        <div class="label">Betting</div>
                     </div>
 
 
                     <div class="box">
                         <div class="boxIcon">
-                            <i class="fa-solid fa-id-badge"></i></i>
+                            <i class="fa-solid fa-tv"></i></i>
                         </div>
-                        <div class="label">To Opay</div>
+                        <div class="label">TV</div>
                     </div>
 
 
@@ -136,34 +136,34 @@
                 <div class="downSub">
                     <div class="box">
                         <div class="boxIcon">
-                            <i class="fa-solid fa-id-badge"></i></i>
+                            <i class="fa-solid fa-box"></i></i>
                         </div>
-                        <div class="label">To Opay</div>
+                        <div class="label">Safebox</div>
                     </div>
 
 
 
                     <div class="box">
                         <div class="boxIcon">
-                            <i class="fa-solid fa-id-badge"></i></i>
+                            <i class="fa-solid fa-sack-dollar"></i></i>
                         </div>
-                        <div class="label">To Opay</div>
+                        <div class="label">Loan</div>
                     </div>
 
 
                     <div class="box">
                         <div class="boxIcon">
-                            <i class="fa-solid fa-id-badge"></i></i>
+                            <i class="fa-solid fa-headset"></i></i>
                         </div>
-                        <div class="label">To Opay</div>
+                        <div class="label">Invitation</div>
                     </div>
 
 
                     <div class="box">
                         <div class="boxIcon">
-                            <i class="fa-solid fa-id-badge"></i></i>
+                            <i class="fa-solid fa-angles-right"></i></i>
                         </div>
-                        <div class="label">To Opay</div>
+                        <div class="label">More</div>
                     </div>
 
 
